base.css
@import url('https://fonts.googleapis.com/css2?family=Croissant+One&family=Roboto+Slab&family=Ubuntu+Condensed&display=swap');

@font-face {
    font-family: 'Happy Times';
    src: url('fonts/happy-times-NG_regular_master_web.woff2') format('woff2');
    font-style: normal;
}



:root {
    /*
font-family: 'Croissant One', cursive;
font-family: 'Roboto Slab', serif;
font-family: 'Ubuntu Condensed', sans-serif;
    */
    --h1-font: 'Happy Times';
    --subheader-font: 'Happy Times';
    --body-text-font: 'Roboto Slab', serif;
}

body {
    all: initial;
    min-height: 100%;
    background-position: 0% 45%;
    background-size: cover;
    font-family: --var(--body-text-font);
}

h1, h2, h3, h4, h5 {
    text-transform: capitalize;
    box-sizing: border-box;
    margin: 0px 0px 16px;
    min-width: 0px;
    font-weight: 500;
    font-family: var(--subheader-font);
    line-height: 1.25;
    text-align: left;
}

h1 {
    font-family: var(--h1-font);
}

a:has(h1) {
    text-decoration: none;
}

h1, h2 {
    font-size: 64px;
}

h3 {
    font-size: 48px;
}

h4 {
    font-size: 32px;
}

h5 {
    font-size: 24px;
    margin-bottom: 0px;
}

p, pre {
    font-size: 28px;
}

a {
    color: black;
}

ul {
    padding-left: 15px;
}

section {
    margin-bottom: 20px;
    border-bottom: 1px dashed white;
}

.site {
    padding: 2.5em 4em 4em;
    margin: 0px;
    height: 100%;
}

.home, .about {
    color: white;
    background-color: black;
}

.home a, .about a {
    color: white;
}

.gallery {
    display: grid;
    grid-gap: 15px;
    grid-template-columns: repeat(3, 1fr);
}

project-card:last-of-type {
    /* height of footer plus some padding */
    margin-bottom: 90px;
}

bio-block:last-of-type {
    /* height of footer plus some padding */
    margin-bottom: 90px;
}

project-card img {
    max-width: 100%;
}

iframe {
    width: 100%;
    height: 70vh;
}

footer {
    background: black;
    color: white;
    text-transform: uppercase;
    width: 100%;
    height: 60px;
    bottom: 0px;
    position: fixed;
    padding: 1.5em 4em;
    box-sizing: border-box;
    margin: 0px;
    min-width: 0px;
    -webkit-box-pack: justify;
    justify-content: space-between;
    flex-wrap: wrap;
    display: flex;
    line-height: 1.25;
    font-size: 14px;
    border-top: 1px dashed white
}

footer a {
    color: white;
    text-decoration: none;
    border-bottom: 1px solid white;
    display: inline-block;
}

@media screen and (max-width: 500px) {
    h2, h3 {
        font-size: 32px;
    }
    h4 {
        font-size: 24px;
    }
    h5 {
        font-size: 20px;
    }

    .site {
        padding: 2em 2em 2em;
    }

    .gallery {
        grid-template-columns: repeat(1, 1fr);
    }

    footer {
        height: 80px;
        bottom: 0px;
        position: fixed;
        padding: 1em 2em;
    }

    footer a {
        margin-bottom: 5px;
    }
}

